# capm

./: .capm.yml  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: code-analysis.yml  release.yml
capm/: __main__.py  config.py  package.py  utils.py
capm/entities/: Package.py  PackageConfig.py  PackageDefinition.py
capm/package/: list_format_markdown.py  package.py
tests/: test_config.py  test_package.py
