[project]
name = "capm"
version = "0.1.0"
description = "Code Analysis Package Manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.36.0",
    "pyinstaller>=6.14.2",
]

[tool.poe.tasks.bundle]
help = "Create a binary executable using pyinstaller"
cmd = "pyinstaller --workpath .build --specpath dist -n capm capm/__main__.py"
