[project]
name = "capm"
version = "0.1.0"
description = "Code Analysis Package Manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
]

[project.scripts]
mycapm = "capm.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "poethepoet>=0.36.0",
    "pyinstaller>=6.14.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks.bundle]
help = "Create a binary executable using pyinstaller"
cmd = "pyinstaller --workpath .build --clean --noconfirm --add-data ../capm/packages:packages --specpath dist -n capm capm/__main__.py"
