[project]
name = "capm"
version = "0.1.0"
description = "Code Analysis Package Manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "halo>=0.0.31",
    "pydantic-settings>=2.10.1",
    "typer>=0.16.0",
]

[project.scripts]
mycapm = "capm.__main__:cli"

[dependency-groups]
dev = [
    "poethepoet>=0.36.0",
    "pyinstaller>=6.14.2",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks.bundle]
help = "Create a binary executable using pyinstaller"
cmd = "pyinstaller --workpath .build --clean --noconfirm --add-data ../capm/packages:packages --specpath dist -n capm capm/__main__.py"
